# yero

./: Cargo.toml  README.md
migrations/: 001_create_users_table.sql
src/: auth.rs  handler.rs  main.rs  models.rs  route.rs  schema.rs  templates.rs
src/route/: user_api.rs
templates/: hello.html  index.html  register.html
