[package]
name = "budget_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
axum = "0.7.3"
dotenv = "0.15.0"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
